# CNPM

./: .gitignore  README.md  asset-manifest.json  index.html  manifest.json  package-lock.json  package.json
backend/: manage.py  pyproject.toml  seed_data.py  wsgi.py
backend/accounts/: models.py  serializers.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/labs/: admin.py  models.py  serializers.py  views.py
backend/labs/migrations/: 0001_initial.py
backend/orders/: models.py  serializers.py  views.py
backend/orders/migrations/: 0001_initial.py
backend/products/: admin.py  models.py  serializers.py  views.py
backend/products/migrations/: 0001_initial.py
backend/reports/: urls.py  views.py
backend/stem_kit_backend/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
backend/support/: models.py  serializers.py  urls.py  views.py
backend/support/migrations/: 0001_initial.py
frontend/: jest.config.js  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx  types.d.ts  types.ts
frontend/src/components/: Navbar.tsx  OrderStatus.tsx  ProductCard.tsx  UserAvatar.tsx
frontend/src/components/Layout/: Layout.tsx
frontend/src/pages/: Admin.tsx  Cart.tsx  Home.tsx  LabSupport.tsx  Login.tsx  OrderManagement.tsx  Orders.tsx  ProductDetail.tsx  Products.tsx  Register.tsx  Reports.tsx  Support.tsx
frontend/src/services/: api.ts
frontend/src/store/: index.ts
frontend/src/types/: index.ts
frontend/src/utils/: test-utils.tsx
(+3 files in other folders)
